# ocaml-agent-graph

./: .gitignore  .ocamlformat  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  dune-project  install.sh  ocaml-agent-graph.opam  run-ollama.sh  run.sh  start-macos-client.command
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
config/: client.json  client.ollama.json  example.gateway.json  memory_policy.json  runtime.json  runtime.ollama.json
config/prompts/: graph_terminal_assistant.md  swarm_messenger_spokesperson.md
demos/: README.md  catalog.json
demos/adaptive_webcrawler/: README.md  gateway.json  run.sh  scenario.json
demos/category_restock_optimizer/: README.md  run.sh  scenario.json
demos/memory_bridge_bulkhead/: README.md  run.sh
demos/multi_supplier_rfq/: README.md  run.sh  (+1 more)
doc/: CONCEPT_CONTINUOUS_IMPROVEMENT.md  HUMAN_TERMINAL_ASSISTANT.md  MAKE_YOUR_OWN_AGENT.md  MESSENGER_CONNECTORS.md  MULTI_MACHINE.md  README.md  RELEASING.md  START_HERE.md
docs/: swarm-layers.md
lib/: agent_graph.intent  agent_graph.ml  dune
scripts/: freebsd_starter.sh  http_dist_server.sh  http_machine_server.sh  linux_starter.sh  macos_starter.sh  remote_common.sh  remote_human_terminal.sh  remote_install.sh  remote_machine_terminal.sh  start-with-messengers.sh  starter_common.sh  ubuntu_starter.sh
test/: dune  test_agent_graph.intent  test_agent_graph.ml  test_client.ml  test_coordination.ml  test_demos.ml  test_protocol.ml
(+105 files in other folders)
