(test
 (name test_agent_graph)
 (libraries agent_graph alcotest lwt.unix bulkhead_lm))

(test
 (name test_client)
 (libraries agent_graph alcotest lwt.unix bulkhead_lm))

(test
 (name test_demos)
 (libraries agent_graph alcotest yojson unix))

(test
 (name test_protocol)
 (libraries agent_graph alcotest unix))

(test
 (name test_coordination)
 (libraries agent_graph alcotest lwt.unix bulkhead_lm))
